# rill

./: .darwin-goreleaser.yaml  .data1.parquet.crc  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .gitpod.yml  .go-test.yml  .golangci.yml  .goreleaser-build.yaml  .goreleaser-darwin-amd64.yaml  .goreleaser-darwin-arm64.yaml  .goreleaser-darwin.yaml  .goreleaser-darwin_amd64.yaml  .goreleaser-darwin_arm64.yaml  .goreleaser-linux-amd64.yaml  .goreleaser-linux-arm64.yaml  .goreleaser-linux_amd64.yaml  .goreleaser-linux_arm64.yaml  .goreleaser-release.yaml  .goreleaser.darwin.yaml  .goreleaser.linux.yaml  .goreleaser.yaml  .linux-goreleaser.yaml  .mcp.json  .npmrc  .prettierignore  .prettierrc  .tool-versions  .travis.yaml  .travis.yml  AGENTS.md  CANVAS_RACE_CONDITION_AUDIT.md  CODE_REVIEW.md  CODE_REVIEW_V2.md  CODE_REVIEW_V3.md  COMMUNITY-POLICY.md  CONNECTOR_REFACTOR_PLAN.md  CONTRIBUTING.md  DEVELOPER-GUIDE.md  (+37 more)
.claude/: CLAUDE.md  launch.json  settings.json
.dev-project/: rill.yaml
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  proposed-pr-template.md  pull_request_template.md  release.yml
.storybook/: main.js
.superset/: config.json
mcp-server/: Dockerfile  README.md  admin.py  app.py  mcp_server.py  pyproject.toml  runtime.py  types.py  viz.py
mcp-server/modules/: admin.py  rill.py  runtime.py  viz.py
mcp-server/subservers/: viz.py
mcp-server/subservers/rill/: admin_client.py  pydantic_models.py  rill.py  runtime_client.py  utils.py
tui/: Cargo.toml
tui/tui/: Cargo.toml
(+13407 files in other folders)
