[project]
name = "mcp-server"
version = "0.1.0"
description = "Rill MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.2.5",
    "mcp[cli]>=1.6.0",
    "vl-convert-python>=1.7.0",
    "openai>=1.6.0",
    "pydantic>=2.11.3",
]

[tool.black]
line-length = 88
